fix contact data wrap

--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -67,6 +67,7 @@ section.contact {
       flex-wrap: wrap;
 
       figure {
+        width: 250px;
         display: flex;
         flex-direction: column;
         align-items: center;
